--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "cypress": "^12.7.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~5.1.0",
